[package]
name = "java_runtime"
version = "0.0.2"
authors = ["xuxiaocheng <2762267080@qq.com>"]
edition = "2021"
description = "An additional crate for j4rs, providing jre8."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xuxiaocheng0201/java_runtime"
documentation = "https://docs.rs/tcp-server/"
keywords = ["java", "runtime", "j4rs"]

[dependencies]
java-locator = "~0.1"
thiserror = "^1"
ureq = "^2"
tempfile = "^3"
sha1 = "~0.10"
zip = "~0.6"

[badges]
maintenance = { status = "actively-developed" }
